# mimi-content

./: .gitignore  Cargo.toml  README.md
src/: common.rs  delivery_report.rs  derived.rs  dispositions.rs  gfm_mimi.rs  lib.rs  message_id.rs  nested_part.rs  rfc9581.rs
src/nested_part/: codec.rs
tests/: test_spec_examples.rs
