[package]
name = "mimi-content"
version = "0.6.0"
edition = "2021"

[features]
default = []
gfm-mimi = ["dep:comrak"]
franking-tag = ["dep:hmac"]

[dependencies]
thiserror = "2"
ciborium = "0.2"
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "1.1"
serde_repr = "0.1"
serde_bytes = "0.11"
digest = { version = "0.10", features = ["oid"] }
rand_core = "0.6"
bon = "3"
comrak = { version = "0.39", default-features = false, features = [
    "syntect",
    "shortcodes",
    "bon",
], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10" }

[dev-dependencies]
pretty_assertions = "1.4"
rand = "0.8"
const_format = "0.2"
wasm-bindgen-test = "0.3"
sha2 = { version = "0.10", features = ["oid"] }
sha3 = { version = "0.10", features = ["oid"] }
